--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <h1>Vou revelar seu destino!</h1>
 
             <p>
-                Clique em fazer pergunta para que seu destino seja revelado...
+                Clique em fazer uma pergunta para que seu destino seja
+                revelado...
             </p>
 
             <input
